plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://maven.aliyun.com/repository/public/" }
    maven { url = "https://maven.ladysnake.org/releases" }
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://api.modrinth.com/maven" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url = "https://maven.uuid.gg/releases" }
    maven { url = "https://maven.bawnorton.com/releases" }
    flatDir { dirs "libs" }
}

loom { }

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings loom.officialMojangMappings()
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"
    modImplementation "com.terraformersmc:modmenu:11.0.3"
    // 开发环境必须使用上游的 named dev JAR；成品 intermediary JAR 在 Loom 中会漏映射
    // 继承的静态方法调用（例如 Block.simpleCodec），导致 runClient NoSuchMethodError。
    implementation files("libs/star_rail_express-4.3.0-dev.jar")
    // SRE/Betel 的硬依赖必须进入开发运行时；仅 compileOnly 会让 runClient 在
    // Fabric 依赖解析阶段直接退出。
    modImplementation files("libs/wathe-1.3.2.jar")
    modImplementation files("libs/ratatouille-1.4.3-1.21.1.jar")
    modImplementation files("libs/fabric-carpet-1.21-1.4.147+v240613.jar")
    modImplementation files("libs/voicechat-fabric-1.21.1-2.6.18.jar")
    modImplementation files("libs/sre-lib-1.0.3.jar")
    modImplementation files("libs/exposure-fabric-1.21.1-1.9.11.jar")
    modImplementation files("libs/ForgeConfigAPIPort-v21.1.6-1.21.1-Fabric.jar")
    modImplementation files("libs/architectury-13.0.11-fabric.jar")
    modImplementation files("libs/midnightlib-1.9.2+1.21.1-fabric.jar")
    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-base:6.1.3"
    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-entity:6.1.3"
    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-world:6.1.3"
    modImplementation "org.ladysnake.cardinal-components-api:cardinal-components-scoreboard:6.1.3"
    modImplementation("me.shedaniel.cloth:cloth-config-fabric:15.0.140") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    // SRE 4.3.0 的玩家扩展接口直接继承 DataSyncPlayerExt，但其 fabric.mod.json
    // 未声明该硬依赖；缺少时会在 Minecraft 主类加载阶段 NoClassDefFoundError。
    modImplementation "dev.upcraft.datasync:datasync-minecraft-1.21.1-fabric:0.10.2"
    // SRE 的 wathe_blocker mixin 使用 @MixinSquared:Handler 动态选择器。
    modImplementation "com.github.bawnorton.mixinsquared:mixinsquared-fabric:0.3.7-beta.1"
    implementation "com.zaxxer:HikariCP:5.1.0"
    implementation "com.github.promeg:tinypinyin:2.0.3"
    implementation "com.electronwill.night-config:core:3.8.1"
    implementation "com.electronwill.night-config:toml:3.8.1"
    modImplementation files("libs/betel-nut-mod-4.0.1.jar")

    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    testImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
}

afterEvaluate {
    configurations.testCompileClasspath.extendsFrom(
            configurations.getByName("minecraftNamedCompile")
    )
    configurations.testRuntimeClasspath.extendsFrom(
            configurations.getByName("minecraftNamedRuntime")
    )
}

def stagedTestRuntimeDir = new File(gradle.gradleUserHomeDir, "habitrain-core-test-runtime")

tasks.register("stageTestRuntime", Sync) {
    dependsOn(tasks.named("testClasses"))
    into(stagedTestRuntimeDir)
    from(sourceSets.test.output.classesDirs) {
        into("test")
    }
    from(sourceSets.main.output) {
        into("main")
    }
    from(configurations.testRuntimeClasspath) {
        into("libs")
    }
}

test {
    useJUnitPlatform()
    dependsOn(tasks.named("stageTestRuntime"))
    // Gradle's Windows test worker corrupts non-ASCII classpath entries.
    // Stage classes and resolved jars under Gradle home before forking it.
    testClassesDirs = files(new File(stagedTestRuntimeDir, "test"))
    classpath = files(
            new File(stagedTestRuntimeDir, "test"),
            new File(stagedTestRuntimeDir, "main")
    ) + fileTree(new File(stagedTestRuntimeDir, "libs")) {
        include("*.jar")
    }
}

processResources {
    def version = project.version
    inputs.property "version", version
    filesMatching("fabric.mod.json") {
        expand "version": version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    withSourcesJar()
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

def releaseArchiveBaseName = project.archives_base_name
def releaseVersion = project.version.toString()

jar {
    from("LICENSE") { rename { "${it}_${releaseArchiveBaseName}" } }
}

// 先在 build 内暂存，完整构建成功后再把带 restored 后缀的 JAR 交付到父目录。
// 不能把 Copy 任务的输出目录设成项目父目录，否则 Gradle 9 会把整个项目误判为任务输出。
def releaseOutputDir = layout.buildDirectory.dir("release")

tasks.register("copyReleaseJar", Copy) {
    dependsOn(tasks.named("remapJar"))
    from(tasks.named("remapJar").flatMap { it.archiveFile })
    into(releaseOutputDir)
    rename { "${releaseArchiveBaseName}-${releaseVersion}-restored.jar" }
}

tasks.named("assemble") {
    dependsOn(tasks.named("copyReleaseJar"))
}

publishing {
    publications { create("mavenJava", MavenPublication) { from components.java } }
    repositories { mavenLocal() }
}
